--- a/style/estilo.css
+++ b/style/estilo.css
@@ -1,7 +1,9 @@
 :root{
     --cor-de-fundo:#EBECEE;
     --cor-branca:#FFFFFF;
-    }
+    --laranja: #EB9B00;
+    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+}
 body{
     background-color: var(--cor-de-fundo);
     }
@@ -33,7 +35,23 @@ body{
     display: none;
     position: absolute;
     top: 100%;
+    width: 60vw;
 }
 .container__botao:checked ~ .lista-menu {
     display: block;
-    }
+}
+.lista-menu__titulo,
+.lista-menu__item {
+padding: 1em;
+background-color: var(--branco);
+}
+.lista-menu__titulo {
+    color: var(--laranja);}
+    
+.lista-menu__link {
+background: var(--azul-degrade);
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+background-clip: text;
+text-transform: uppercase;
+}.
