--- a/style/estilo.css
+++ b/style/estilo.css
@@ -3,9 +3,13 @@
     --cor-branca:#FFFFFF;
     --laranja: #EB9B00;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --fonte-principal: “Poppins”;
 }
 body{
     background-color: var(--cor-de-fundo);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
     }
 .cabeçalho{
         background-color: var(--cor-branca);
@@ -21,7 +25,6 @@ body{
     background-repeat: no-repeat;
     background-position: center;
     display: inline-block;
-        
 }
 .conteiner{
         display: flex;     
@@ -46,12 +49,19 @@ padding: 1em;
 background-color: var(--branco);
 }
 .lista-menu__titulo {
-    color: var(--laranja);}
-    
+    color: var(--laranja);
+    font-weight: 700;
+}
 .lista-menu__link {
 background: var(--azul-degrade);
 -webkit-background-clip: text;
 -webkit-text-fill-color: transparent;
 background-clip: text;
 text-transform: uppercase;
-}.
+}
+.container__botao {
+    display: none;
+    }
+
+
+    
